--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   convex_bottom_bar: 
   introduction_screen: ^2.1.0
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
