--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
   flutter_svg: ^1.0.0
+  kommunicate_flutter: ^1.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
