--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_core: ^1.4.0
   flutter_svg: ^1.0.0
   kommunicate_flutter: ^1.4.0
+  getwidget: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
