--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   timeline_tile: ^2.0.0
   google_fonts: ^2.2.0
+  google_maps_flutter: ^2.1.1
+  http: ^0.13.4
   
 
 dev_dependencies:
