--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^2.2.0
   google_maps_flutter: ^2.1.1
   http: ^0.13.4
+  image_picker: ^0.8.4+4
   
 
 dev_dependencies:
